--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="first-section">
     <div class="header">
         <div class="logo">
-            HEADER LOGO
+            Header Logo
         </div>
         <ul class="links">
             <li><a href="google.com">header link one</a></li>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="right">
-
+            Aqui va una imagen
         </div>
     </div>
   </div>  
