Finished first section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             </div>
         </div>
         <div class="right">
-            Aqui va una imagen
+            <!-- <img src="img/first-image.jpg" alt="Random image"> -->
+            <div class="placeholder"> This is a placeholder for an image</div>
         </div>
     </div>
   </div>  
