--- a/index.html
+++ b/index.html
@@ -38,5 +38,43 @@
         </div>
     </div>
   </div>  
+  <div class="second-section">
+    <div class="second-title">
+        Some random information.
+    </div>
+    <div class="cards">
+            <div class="info">
+                <div class="card"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+           </div>
+
+           <div class="info">
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+           </div>
+
+           <div class="info">
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="info">
+            <div class="card"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+    </div>
+  </div>
+  <div class="quote">
+    <div class="quote-text">
+        This is an inspiring quote, or a testimonial from a 
+        customer. Maybe it's just filling up space, or maybe
+        people will actually read it. Who knows? All i know 
+        is that it looks nice
+    </div>
+    <div class="quote-author">
+        -Thor, God of Thunder
+    </div>
+
+  </div>
 </body>
 </html>
