--- a/index.html
+++ b/index.html
@@ -70,11 +70,23 @@
         customer. Maybe it's just filling up space, or maybe
         people will actually read it. Who knows? All i know 
         is that it looks nice
-    </div>
     <div class="quote-author">
         -Thor, God of Thunder
     </div>
 
+
+    </div>
+      </div>
+  <div class="fourth">
+    <div class="rectangle">
+        <div class="left-rect">
+            <p class="title">Call to action! It's time!</p>
+            <p class="description">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="right-rect">
+            <button class="second-su">Sign up</button>
+        </div>
+    </div>
   </div>
 </body>
 </html>
