--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 It's a smaller font and the color is lower contrast
             </div>
             <div class="left-button">
-                <button class="sign-up">Sign Up</button>
+                <button class="sign-up">Sign up</button>
             </div>
         </div>
         <div class="right">
@@ -87,6 +87,9 @@
             <button class="second-su">Sign up</button>
         </div>
     </div>
+  </div>
+  <div class="footer">
+    Copyright © Abel Martinez 2023
   </div>
 </body>
 </html>
